// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statsOutput statsOutput/auxiliary-files-test should print correct stats for 1`] = `
PublicPath: auto
asset bundle.js xx KiB {909} [emitted] (name: main)
asset 98396dbfd5c74c34.png 7 bytes ({909}) [emitted] [immutable] [from: raw.png] (auxiliary name: main)
Entrypoint main xx KiB (7 bytes) = bundle.js xx KiB (98396dbfd5c74c34.png 7 bytes)
chunk {909} (runtime: main) bundle.js (main) 7 bytes (asset) 159 bytes (javascript) xx KiB (runtime) [entry] [rendered]
  > ./index main
  ./index.js + 1 modules [686] 117 bytes {909} [depth 0] [code generated]
    [no exports]
    [no exports used]
    entry ./index
    | ./index.js 75 bytes [depth 0] [orphan] [dependent] [built]
    |   [no exports]
    |   [no exports used]
    |   ModuleConcatenation bailout: Module is an entry point
    | ./raw.png [193] 42 bytes (javascript) 7 bytes (asset) {909} [depth 1] [built] [code generated]
    |   [exports: default]
    |   [no exports used]
    |   esm import ./raw.png ./index.js 2:0-33
  ./raw.png [193] 42 bytes (javascript) 7 bytes (asset) {909} [depth 1] [built] [code generated]
    [exports: default]
    [no exports used]
    esm import ./raw.png ./index.js 2:0-33
modules by path ./ 235 bytes (javascript) 7 bytes (asset)
  orphan modules 76 bytes [orphan]
    ./index.js 75 bytes [depth 0] [orphan] [built]
      [no exports]
      [no exports used]
      ModuleConcatenation bailout: Module is an entry point
    ./stringModule.js 1 bytes [depth 1] [orphan] [built]
      [module unused]
      ModuleConcatenation bailout: Module is not an ECMAScript module
      esm import ./stringModule [686] ./index.js 1:0-41
  code generated modules 159 bytes (javascript) 7 bytes (asset) [code generated]
    ./index.js + 1 modules [686] 117 bytes {909} [depth 0] [code generated]
      [no exports]
      [no exports used]
      entry ./index
      | ./index.js 75 bytes [depth 0] [orphan] [built]
      |   [no exports]
      |   [no exports used]
      |   ModuleConcatenation bailout: Module is an entry point
      | ./raw.png [193] 42 bytes (javascript) 7 bytes (asset) {909} [depth 1] [built] [code generated]
      |   [exports: default]
      |   [no exports used]
      |   esm import ./raw.png ./index.js 2:0-33
    ./raw.png [193] 42 bytes (javascript) 7 bytes (asset) {909} [depth 1] [built] [code generated]
      [exports: default]
      [no exports used]
      esm import ./raw.png ./index.js 2:0-33
runtime modules xx KiB
  webpack/runtime/auto_public_path xx KiB {909} [code generated]
    [no exports]
    [used exports unknown]
  webpack/runtime/global 216 bytes {909} [code generated]
    [no exports]
    [used exports unknown]
  
Rspack compiled successfully (27eddb11e03f28d2)
`;

exports[`statsOutput statsOutput/builtin-swc-loader-parse-error should print correct stats for 1`] = `
ERROR in ./index.ts
  × Module build failed:
  ├─▶   ×
  │     │   x Expected '{', got 'error'
  │     │    ,-[<TEST_TOOLS_ROOT>/tests/statsOutputCases/builtin-swc-loader-parse-error/index.ts<LINE_COL>]
  │     │  1 | export error;
  │     │    :        ^^^^^
  │     │    \`----
  │     │
  │   
  ╰─▶ Syntax Error

Rspack compiled with 1 error
`;

exports[`statsOutput statsOutput/concatenated-modules should print correct stats for 1`] = `
asset main.js 234 bytes [emitted] (name: main)
orphan modules 141 bytes [orphan] 4 modules
./index.js + 3 modules 141 bytes [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/css-concat should print correct stats for 1`] = `
asset main.js xx KiB [emitted] (name: main)
asset main.css 24 bytes [emitted] (name: main)
Entrypoint main xx KiB = main.js xx KiB main.css 24 bytes
runtime modules xx KiB 6 modules
cacheable modules 62 bytes (javascript) 23 bytes (css)
  ./index.js 20 bytes [built] [code generated]
  ./foo.css 42 bytes (javascript) 23 bytes (css) [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/filename should print correct stats for 1`] = `
asset 909.xxxx.js xx KiB [emitted] (name: main)
asset 521.xxxx.js 320 bytes [emitted]
runtime modules xx KiB 11 modules
cacheable modules 70 bytes
  ./index.js 38 bytes [built] [code generated]
  ./dynamic.js 32 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/hot+production should print correct stats for 1`] = `
asset main.js xx KiB [emitted] (name: main)
runtime modules xx KiB 12 modules
./index.js 25 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/ignore-plugin should print correct stats for 1`] = `
runtime modules 88 bytes 1 module
./index.js 103 bytes [built] [code generated]
<TEST_TOOLS_ROOT>/tests/statsOutputCases/ignore-plugin/locals|sync|/^\\.\\/.*$/ 160 bytes [built] [code generated]
./locals/en.js 30 bytes [built] [code generated]
`;

exports[`statsOutput statsOutput/ignore-warning should print correct stats for 1`] = `Rspack compiled successfully`;

exports[`statsOutput statsOutput/issue-3558 should print correct stats for 1`] = `Rspack compiled successfully`;

exports[`statsOutput statsOutput/legacy-ie-css-warning should print correct stats for 1`] = `Rspack compiled successfully`;

exports[`statsOutput statsOutput/let-keyword-as-variable-name-error should print correct stats for 1`] = `
ERROR in ./index.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Unexpected token \`let\`. Expected let is reserved in const, let, class declaration
         ╭────
       1 │ let let = let;
         ·     ───
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error
`;

exports[`statsOutput statsOutput/limit-chunk-count-plugin should print correct stats for 1`] = `
1 chunks:
  asset bundle1.js xx KiB [emitted] (name: main)
  chunk (runtime: main) bundle1.js (main) 219 bytes (javascript) xx KiB (runtime) <{909}> >{909}< [entry] [rendered]
    dependent modules 96 bytes [dependent] 4 modules
    ./index.js 123 bytes [built] [code generated]
  1 chunks (Rspack x.x.x) compiled successfully in X s

2 chunks:
  asset bundle2.js xx KiB [emitted] (name: main)
  asset 76.bundle2.js 491 bytes [emitted] (name: c)
  chunk (runtime: main) 76.bundle2.js (c) 74 bytes <{76}> <{909}> >{76}< [rendered]
    dependent modules 44 bytes [dependent] 2 modules
    ./c.js 30 bytes [built] [code generated]
  chunk (runtime: main) bundle2.js (main) 145 bytes (javascript) xx KiB (runtime) >{76}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  2 chunks (Rspack x.x.x) compiled successfully in X s

3 chunks:
  asset bundle3.js xx KiB [emitted] (name: main)
  asset 76.bundle3.js 385 bytes [emitted] (name: c)
  asset 345.bundle3.js 182 bytes [emitted]
  chunk (runtime: main) 345.bundle3.js 44 bytes <{76}> [rendered]
    ./d.js 22 bytes [built] [code generated]
    ./e.js 22 bytes [built] [code generated]
  chunk (runtime: main) 76.bundle3.js (c) 30 bytes <{909}> >{345}< [rendered]
    ./c.js 30 bytes [built] [code generated]
  chunk (runtime: main) bundle3.js (main) 145 bytes (javascript) xx KiB (runtime) >{76}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  3 chunks (Rspack x.x.x) compiled successfully in X s

4 chunks:
  asset bundle4.js xx KiB [emitted] (name: main)
  asset 76.bundle4.js 385 bytes [emitted] (name: c)
  asset 697.bundle4.js 128 bytes [emitted]
  asset 753.bundle4.js 128 bytes [emitted]
  chunk (runtime: main) 697.bundle4.js 22 bytes <{76}> [rendered]
    ./e.js 22 bytes [built] [code generated]
  chunk (runtime: main) 753.bundle4.js 22 bytes <{76}> [rendered]
    ./d.js 22 bytes [built] [code generated]
  chunk (runtime: main) 76.bundle4.js (c) 30 bytes <{909}> >{697}< >{753}< [rendered]
    ./c.js 30 bytes [built] [code generated]
  chunk (runtime: main) bundle4.js (main) 145 bytes (javascript) xx KiB (runtime) >{76}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  4 chunks (Rspack x.x.x) compiled successfully in X s
`;

exports[`statsOutput statsOutput/logging-loader should print correct stats for 1`] = `
DEBUG LOG from TestLoader|<TEST_TOOLS_ROOT>/tests/statsOutputCases/logging-loader/index.js
<-> group
  <i> info something
      log something
    -------
`;

exports[`statsOutput statsOutput/match-resource-data-url should print correct stats for 1`] = `
runtime modules 647 bytes 3 modules
./index.js 150 bytes [built] [code generated]
./a.js!=!data:javascript,var __looooooooo.. 98 bytes [built] [code generated]
`;

exports[`statsOutput statsOutput/minify-error should print correct stats for 1`] = `
ERROR in × JavaScript parsing error: 'const' declarations must be initialized
   ╭─[1:6]
 1 │ const a {}
   ·       ─
 2 │ (() => { // webpackBootstrap
 3 │ console.log(0);
   ╰────

ERROR in × JavaScript parsing error: Expected a semicolon
   ╭─[1:8]
 1 │ const a {}
   ·         ─
 2 │ (() => { // webpackBootstrap
 3 │ console.log(0);
   ╰────

Rspack compiled with 2 errors
`;

exports[`statsOutput statsOutput/named-chunk-group should print correct stats for 1`] = `
Entrypoint main xx KiB = main.js
Chunk Group cimanyd 320 bytes = cimanyd.js
`;

exports[`statsOutput statsOutput/nonexistent-import-source-error should print correct stats for 1`] = `
ERROR in ./index.js 1:0-19
  × Module not found: Can't resolve 'not-exist' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/nonexistent-import-source-error'
   ╭────
 1 │ import "not-exist";
   ·        ───────────
   ╰────

Rspack compiled with 1 error
`;

exports[`statsOutput statsOutput/optimization-chunk-ids-natural should print correct stats for 1`] = `
Entrypoint e1 xx KiB = e1.js
Entrypoint e2 xx KiB = e2.js
chunk (runtime: e1) 0.js 24 bytes [rendered]
chunk (runtime: e1) 1.js 52 bytes [rendered]
chunk (runtime: e1, e2) 2.js 22 bytes [rendered]
chunk (runtime: e1) e1.js (e1) 74 bytes (javascript) xx KiB (runtime) [entry] [rendered]
chunk (runtime: e2) e2.js (e2) 51 bytes (javascript) xx KiB (runtime) [entry] [rendered]
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk should print correct stats for 1`] = `
Entrypoint e1 xx KiB = e1~runtime.js xx KiB e1.js 454 bytes
Entrypoint e2 xx KiB = e2~runtime.js xx KiB e2.js 454 bytes
chunk (runtime: e1~runtime) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: e1~runtime) e1~runtime.js (e1~runtime) xx KiB [initial] [rendered]
chunk (runtime: e2~runtime) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: e2~runtime) e2~runtime.js (e2~runtime) xx KiB [initial] [rendered]
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-multiple should print correct stats for 1`] = `
Entrypoint e1 xx KiB = runtime~e1.js xx KiB e1.js 454 bytes
Entrypoint e2 xx KiB = runtime~e2.js xx KiB e2.js 454 bytes
chunk (runtime: runtime~e1) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e2) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e1) runtime~e1.js (runtime~e1) xx KiB [initial] [rendered]
chunk (runtime: runtime~e2) runtime~e2.js (runtime~e2) xx KiB [initial] [rendered]
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-single should print correct stats for 1`] = `
Entrypoint e1 xx KiB = runtime.js xx KiB e1.js 454 bytes
Entrypoint e2 xx KiB = runtime.js xx KiB e2.js 454 bytes
chunk (runtime: runtime) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime) runtime.js (runtime) xx KiB [initial] [rendered]
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-true should print correct stats for 1`] = `
Entrypoint e1 xx KiB = runtime~e1.js xx KiB e1.js 454 bytes
Entrypoint e2 xx KiB = runtime~e2.js xx KiB e2.js 454 bytes
chunk (runtime: runtime~e1) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e2) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e1) runtime~e1.js (runtime~e1) xx KiB [initial] [rendered]
chunk (runtime: runtime~e2) runtime~e2.js (runtime~e2) xx KiB [initial] [rendered]
`;

exports[`statsOutput statsOutput/parse-error should print correct stats for 1`] = `
ERROR in ./b.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected ';', '}' or <eof>
         ╭─[6:7]
       4 │ includes
       5 │ a
       6 │ parser )
         ·        ─
       7 │ error
       8 │ in
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error
`;

exports[`statsOutput statsOutput/performance-disabled should print correct stats for 1`] = `
asset main.js xx KiB [emitted] (name: main)
asset 697.js 128 bytes [emitted]
asset 753.js 128 bytes [emitted]
Entrypoint main xx KiB = main.js
runtime modules xx KiB 12 modules
cacheable modules xx KiB
  ./index.js 49 bytes [built] [code generated]
  ./a.js xx KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/performance-error should print correct stats for 1`] = `
asset main.js xx KiB [emitted] [big] (name: main)
asset 697.js 128 bytes [emitted]
asset 753.js 128 bytes [emitted]
Entrypoint main [big] xx KiB = main.js
runtime modules xx KiB 12 modules
cacheable modules xx KiB
  ./index.js 48 bytes [built] [code generated]
  ./a.js xx KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]

ERROR in × asset size limit: The following asset(s) exceed the recommended size limit (xx KiB). This can impact web performance.Assets:
  │   main.js (xx KiB)


ERROR in × entrypoint size limit: The following entrypoint(s) combined asset size exceeds the recommended limit (xx KiB). This can impact web performance.Entrypoints:
  │   main (xx KiB)
  │       main.js


Rspack x.x.x compiled with 2 errors in X s
`;

exports[`statsOutput statsOutput/performance-no-hints should print correct stats for 1`] = `
asset main.js xx KiB [emitted] [big] (name: main)
asset 697.js 128 bytes [emitted]
asset 753.js 128 bytes [emitted]
Entrypoint main [big] xx KiB = main.js
runtime modules xx KiB 12 modules
cacheable modules xx KiB
  ./index.js 48 bytes [built] [code generated]
  ./a.js xx KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/prefetch-preload-mixed should print correct stats for 1`] = `
chunk (runtime: main) a1.js (a1) 1 bytes <{74}> [rendered]
chunk (runtime: main) c2.js (c2) 1 bytes <{76}> [rendered]
chunk (runtime: main) c1.js (c1) 1 bytes <{76}> [rendered]
chunk (runtime: main) b3.js (b3) 1 bytes <{751}> [rendered]
chunk (runtime: main) b2.js (b2) 1 bytes <{751}> [rendered]
chunk (runtime: main) a.js (a) 136 bytes <{909}> >{330}< >{740}< (prefetch: {330} {740}) [rendered]
chunk (runtime: main) a2.js (a2) 1 bytes <{74}> [rendered]
chunk (runtime: main) b.js (b) 203 bytes <{909}> >{438}< >{439}< >{826}< (prefetch: {826} {438}) (preload: {439}) [rendered]
chunk (runtime: main) c.js (c) 134 bytes <{909}> >{380}< >{433}< (preload: {433} {380}) [rendered]
chunk (runtime: main) b1.js (b1) 1 bytes <{751}> [rendered]
chunk (runtime: main) main.js (main) 195 bytes (javascript) xx KiB (runtime) >{74}< >{751}< >{76}< (prefetch: {74} {751} {76}) [entry] [rendered]
`;

exports[`statsOutput statsOutput/reasons should print correct stats for 1`] = `
./index.js 44 bytes [built] [code generated]
  entry ./index
./a.js 55 bytes [built] [code generated]
  cjs self exports reference self ./a.js
  cjs require ./a ./index.js 1:18-24
`;

exports[`statsOutput statsOutput/resolve-overflow-error should print correct stats for 1`] = `
assets by status 348 bytes [cached] 1 asset
./index.js 51 bytes [built] [code generated] [1 error]

ERROR in ./index.js 1:0-34
  × Module not found: Can't resolve 'cycle-alias/a' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/resolve-overflow-error'
   ╭─[1:18]
 1 │ import { a } from "cycle-alias/a";
   ·                   ───────────────
 2 │ console.log(a);
   ╰────
  help: maybe it had cyclic aliases

Rspack x.x.x compiled with 1 error in X s
`;

exports[`statsOutput statsOutput/resolve-unexpected-exports-in-pkg-error should print correct stats for 1`] = `
asset bundle.js xx KiB [emitted] (name: main)
runtime modules 274 bytes 1 module
./index.js 39 bytes [built] [code generated] [1 error]

ERROR in ./index.js 1:0-22
  × Invalid "exports" target "../../index.js" defined for '.' in the package config <TEST_TOOLS_ROOT>/tests/statsOutputCases/resolve-unexpected-exports-in-pkg-error/node_modules/pkg-a/package.json

Rspack x.x.x compiled with 1 error in X s
`;

exports[`statsOutput statsOutput/runtime-modules should print correct stats for 1`] = `
./index.js 19 bytes [built] [code generated]
webpack/runtime/define_property_getters 285 bytes [code generated]
webpack/runtime/has_own_property 88 bytes [code generated]
webpack/runtime/make_namespace_object 274 bytes [code generated]
`;

exports[`statsOutput statsOutput/runtime-specific-exports should print correct stats for 1`] = `
asset main.js xx KiB [emitted] (name: main)
./example.js 70 bytes [built] [code generated]
  [no exports used]
./increment.js 251 bytes [built] [code generated]
  [exports: decrement, increment, incrementBy2]
  [only some exports used: increment]
./math.js 313 bytes [built] [code generated]
  [exports: add, multiply]
  [only some exports used: add]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/side-effects-bailouts should print correct stats for 1`] = `
asset main.js 177 bytes {909} [emitted] (name: main)
chunk {909} (runtime: main) main.js (main) 91 bytes [entry] [rendered]
orphan modules 91 bytes [orphan] 2 modules
./index.js + 1 modules [911] 91 bytes {909} [code generated]
  [no exports]
  [no exports used]
  entry ./index.js
  
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/simple-export should print correct stats for 1`] = `
asset bundle.js xx KiB [emitted] (name: main)
runtime modules 647 bytes 3 modules
./index.js 26 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/simple-module-source should print correct stats for 1`] = `
asset bundle.js 2 KiB [emitted] (name: main)
runtime modules 637 bytes 3 modules
orphan modules 1 bytes [orphan] 1 module
cacheable modules 82 bytes
  ./index.js 75 bytes [built] [code generated]
  ./raw.png 7 bytes [built] [code generated]
Rspack compiled successfully
`;

exports[`statsOutput statsOutput/stats-hooks should print correct stats for 1`] = `
asset main.js 69 bytes [emitted111] (name: main) [testA: aaaaaa]
./index.js 26 bytes [built] [code generated]
Rspack compiled successfully
`;

exports[`statsOutput statsOutput/try-require-module should print correct stats for 1`] = `
WARNING in ./index.js
  ⚠ Module not found: Can't resolve './missing-module' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/try-require-module'
   ╭─[2:4]
 1 │ try {
 2 │     require('./missing-module')
   ·     ───────────────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning
`;

exports[`statsOutput statsOutput/try-require-resolve-module should print correct stats for 1`] = `
WARNING in ./index.js
  ⚠ Module not found: Can't resolve './missing-module' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/try-require-resolve-module'
   ╭─[2:20]
 1 │ try {
 2 │     require.resolve('./missing-module')
   ·                     ──────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning
`;

exports[`statsOutput statsOutput/try-require-resolve-weak-module should print correct stats for 1`] = `
WARNING in ./index.js
  ⚠ Module not found: Can't resolve './missing-module' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/try-require-resolve-weak-module'
   ╭─[2:24]
 1 │ try {
 2 │     require.resolveWeak('./missing-module')
   ·                         ──────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning
`;
